--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Tu Ba Khuym
-email: your-email@example.com
+email: hoang@kieng.io.vn
 description: A place where I share my documents and knowledge
 author: Tu Ba Khuym
-baseurl: "/tubakhuym"
-url: "https://hoangnb24.github.io"
+baseurl: ""
+url: "https://tubakhuym.kieng.io.vn"
 
 # Social Profiles
 twitter_username: 
